NOJIRA fjerne selftestrammeverk og oppstartlogging (#715)